--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -85,10 +85,10 @@
                         <p align="center">来学嘉教授（IACR Fellow）<br/></p>
                         <p style="text-align:center"><img alt="CSAC-2020" src="image/Chairman.png"  style="width: 160px; height: 200px; " ></a> <br/>
                         <p class="organization">论坛组委会(排名不分先后顺序)<br/></p>
-                        <p align="center">陈克非&nbsp&nbsp吴文玲&nbsp&nbsp林东岱&nbsp&nbsp冯荣权&nbsp&nbsp徐茂智&nbsp&nbsp李凤华&nbsp&nbsp杨义先&nbsp&nbsp;胡磊&nbsp;&nbsp&nbsp戚文峰&nbsp&nbsp秦志光<br/></p>
+                        <p align="center">陈克非&nbsp&nbsp吴文玲&nbsp&nbsp林东岱&nbsp&nbsp冯荣权&nbsp&nbsp徐茂智&nbsp&nbsp李凤华&nbsp&nbsp杨义先&nbsp&nbsp;胡&emsp;磊&nbsp&nbsp戚文峰&nbsp&nbsp秦志光<br/></p>
                         <p align="center">温巧燕&nbsp&nbsp邢朝平&nbsp&nbsp张方国&nbsp&nbsp徐秋亮&nbsp&nbsp马建峰&nbsp&nbsp陈恭亮&nbsp&nbsp马文平&nbsp&nbsp谷大武&nbsp&nbsp毛文波&nbsp&nbsp陈利群<br/></p>
-                        <p align="center">伍前红&nbsp&nbsp张卫明&nbsp&nbsp王美琴&nbsp&nbsp陆荣幸&nbsp&nbsp王良民&nbsp&nbsp;赵波&nbsp;&nbsp&nbsp许春根&nbsp&nbsp沈超&nbsp;&nbsp&nbsp陈立全&nbsp&nbsp;翁健&nbsp;<br/></p>
-                        <p align="center">张福泰&nbsp&nbsp付玉龙&nbsp&nbsp徐鹏&nbsp;&nbsp&nbsp杨侃&nbsp;&nbsp&nbsp贾春福&nbsp&nbsp陈晓峰&nbsp&nbsp李进&nbsp;&nbsp&nbsp沈剑&nbsp;&nbsp&nbsp李小勇&nbsp&nbsp李舟军<br/></p>
+                        <p align="center">伍前红&nbsp&nbsp张卫明&nbsp&nbsp王美琴&nbsp&nbsp陆荣幸&nbsp&nbsp王良民&nbsp&nbsp;赵&emsp;波&nbsp&nbsp许春根&nbsp&nbsp沈&emsp;超&nbsp&nbsp陈立全&nbsp&nbsp;翁&emsp;健<br/></p>
+                        <p align="center">张福泰&nbsp&nbsp付玉龙&nbsp&nbsp徐&emsp;鹏&nbsp&nbsp杨&emsp;侃&nbsp&nbsp贾春福&nbsp&nbsp陈晓峰&nbsp&nbsp李&emsp;进&nbsp&nbsp沈&emsp;剑&nbsp&nbsp李小勇&nbsp&nbsp李舟军<br/></p>
                         <br/><br/>
                         <p class="organization">论坛程序委员会主席<br/></p>
 <!--                        蒋林智（University of Surrey）林璟锵 张正<br/><br/>-->
@@ -116,10 +116,11 @@
                         <p align="center">来学嘉教授（IACR Fellow）<br/></p>
                         <p style="text-align:center"><img alt="CSAC-2020" src="image/Chairman.png"  style="width: 160px; height: 200px; " ></a> <br/>
                         <p class="organization">论坛组委会(排名不分先后顺序)<br/></p>
-                        <p align="center">陈克非&nbsp&nbsp吴文玲&nbsp&nbsp林东岱&nbsp&nbsp冯荣权&nbsp&nbsp徐茂智&nbsp&nbsp李凤华&nbsp&nbsp杨义先&nbsp&nbsp;胡磊&nbsp;&nbsp&nbsp戚文峰&nbsp&nbsp秦志光<br/></p>
-                        <p align="center">温巧燕&nbsp&nbsp邢朝平&nbsp&nbsp张方国&nbsp&nbsp徐秋亮&nbsp&nbsp马建峰&nbsp&nbsp陈恭亮&nbsp&nbsp马文平&nbsp&nbsp谷大武&nbsp&nbsp毛文波&nbsp&nbsp陈利群<br/></p>
-                        <p align="center">伍前红&nbsp&nbsp张卫明&nbsp&nbsp王美琴&nbsp&nbsp陆荣幸&nbsp&nbsp王良民&nbsp&nbsp;赵波&nbsp;&nbsp&nbsp许春根&nbsp&nbsp沈超&nbsp;&nbsp&nbsp陈立全&nbsp&nbsp;翁健&nbsp;<br/></p>
-                        <p align="center">张福泰&nbsp&nbsp付玉龙&nbsp&nbsp徐鹏&nbsp;&nbsp&nbsp杨侃&nbsp;&nbsp&nbsp贾春福&nbsp&nbsp陈晓峰&nbsp&nbsp李进&nbsp;&nbsp&nbsp沈剑&nbsp;&nbsp&nbsp李小勇&nbsp&nbsp李舟军<br/></p>
+                        <p align="center">陈克非&nbsp&nbsp吴文玲&nbsp&nbsp林东岱&nbsp&nbsp冯荣权&nbsp&nbsp徐茂智&nbsp&nbsp李凤华&nbsp&nbsp杨义先&nbsp&nbsp;胡&emsp;磊<br/></p>
+                        <p align="center">戚文峰&nbsp&nbsp秦志光&nbsp&nbsp温巧燕&nbsp&nbsp邢朝平&nbsp&nbsp张方国&nbsp&nbsp徐秋亮&nbsp&nbsp马建峰&nbsp&nbsp陈恭亮<br/></p>
+                        <p align="center">马文平&nbsp&nbsp谷大武&nbsp&nbsp毛文波&nbsp&nbsp陈利群&nbsp&nbsp伍前红&nbsp&nbsp张卫明&nbsp&nbsp王美琴&nbsp&nbsp陆荣幸<br/></p>
+                        <p align="center">王良民&nbsp&nbsp;赵&emsp;波&nbsp&nbsp许春根&nbsp&nbsp沈&emsp;超&nbsp&nbsp陈立全&nbsp&nbsp;翁&emsp;健&nbsp&nbsp张福泰&nbsp&nbsp付玉龙<br/></p>
+                        <p align="center">徐&emsp;鹏&nbsp&nbsp杨&emsp;侃&nbsp&nbsp贾春福&nbsp&nbsp陈晓峰&nbsp&nbsp李&emsp;进&nbsp&nbsp沈&emsp;剑&nbsp&nbsp李小勇&nbsp&nbsp李舟军<br/></p>
                         <br/><br/>
                         <p class="organization">论坛程序委员会主席<br/></p>
                         <!--                        蒋林智（University of Surrey）林璟锵 张正<br/><br/>-->
@@ -169,7 +170,7 @@
                         <p align="left">会议举办时间：2020年08月29日-08月31日。<br/></p>
                         <p align="left">会议报到时间：2019年08月29日 Virtual Conference 腾讯会议网络会议室。<br/></p>
                         <p align="left">会议注册费用：注册费1500元人民币/人。<br/></p>
-                        <p align="left">注册费缴纳：&nbsp户名：湖南淇朗德信息科技有限公司； <br/></p>
+                        <p align="left">注册费缴纳：&emsp;户名：湖南淇朗德信息科技有限公司； <br/></p>
                         <p align="left" style="text-indent:7em;">开户行：中国银行股份有限公司常德市皂果路支行；<br/></p>
                         <p align="left" style="text-indent:7em;">账号：5937 7522 7413。<br/></p>
                         <p align="left" style="text-indent:7em;">缴费时请您注明以下信息：会议CSAC+参会人姓名。<br/></p>
@@ -282,7 +283,7 @@
                                 </table>
                                 <table class="table" style="margin-top: -20px; ">
                                     <caption style="">住宿信息</caption>
-                                    <tbody style="width: 100%;">
+                                    <tbody style="width: 73.5%;">
                                         <tr style="">
                                             <td style="width: 10%;">  </td>
                                             <td style="text-align: center; width: 30%">论坛住宿酒店：网络会议</td>
@@ -292,7 +293,7 @@
                                 </table>
                                 <table class="table" style="margin-top: -20px;">
                                     <caption style="">会议赞助与合作：</caption>
-                                    <tbody style="width: 100%;">
+                                    <tbody style="width: 73.5%;">
                                         <tr>
                                             <td style="width: 5%;">  </td>
                                             <td style="text-align: center; width: 60%">蒋林智; linzjiang(@)hotmail(dot)com</td>
