--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -95,8 +95,8 @@
                         <p align="center">蒋林智（University of Surrey）林璟锵 张正<br/></p>
                         <br/>
                         <p align="center" class="organization">会议程序委员会<br/></p>
-                        <p align="center">林&emsp;聪&nbsp张&emsp;兰&nbsp郭富春&nbsp查达仁&nbsp蒙威志<br/></p>
-                        <p align="center">付安民&nbsp田海博&nbsp黎&emsp;琳&nbsp付章杰&nbsp李&emsp;剑<br/></p>
+                        <p align="center">林&emsp;聪&emsp;张&emsp;兰&emsp;郭富春&emsp;查达仁&emsp;蒙威志<br/></p>
+                        <p align="center">付安民&emsp;田海博&emsp;黎&emsp;琳&emsp;付章杰&emsp;李&emsp;剑<br/></p>
                         <br/>
                         <p align="left">会议举办时间：2020年08月29日-08月31日。<br/></p>
                         <p align="left">会议报到时间：2019年08月29日 Virtual Conference 腾讯会议网络会议室。<br/></p>
@@ -127,8 +127,8 @@
                         <p align="center">蒋林智（University of Surrey）林璟锵 张正<br/></p>
                         <br/>
                         <p align="center" class="organization">会议程序委员会<br/></p>
-                        <p align="center">林&emsp;聪&nbsp张&emsp;兰&nbsp郭富春&nbsp查达仁&nbsp蒙威志<br/></p>
-                        <p align="center">付安民&nbsp田海博&nbsp黎&emsp;琳&nbsp付章杰&nbsp李&emsp;剑<br/></p>
+                        <p align="center">林&emsp;聪&emsp;张&emsp;兰&emsp;郭富春&emsp;查达仁&emsp;蒙威志<br/></p>
+                        <p align="center">付安民&emsp;田海博&emsp;黎&emsp;琳&emsp;付章杰&emsp;李&emsp;剑<br/></p>
                         <br/>
                         <p align="left">会议举办时间：2020年08月29日-08月31日。<br/></p>
                         <p align="left">会议报到时间：2019年08月29日 Virtual Conference 腾讯会议网络会议室。<br/></p>
@@ -164,8 +164,8 @@
                         <p align="center">蒋林智（University of Surrey）林璟锵 张正<br/></p>
                         <br/>
                         <p align="center" class="organization">会议程序委员会<br/></p>
-                        <p align="center">林&emsp;聪&nbsp张&emsp;兰&nbsp郭富春&nbsp查达仁&nbsp蒙威志<br/></p>
-                        <p align="center">付安民&nbsp田海博&nbsp黎&emsp;琳&nbsp付章杰&nbsp李&emsp;剑<br/></p>
+                        <p align="center">林&emsp;聪&emsp;张&emsp;兰&emsp;郭富春&emsp;查达仁&emsp;蒙威志<br/></p>
+                        <p align="center">付安民&emsp;田海博&emsp;黎&emsp;琳&emsp;付章杰&emsp;李&emsp;剑<br/></p>
                         <br/>
                         <p align="left">会议举办时间：2020年08月29日-08月31日。<br/></p>
                         <p align="left">会议报到时间：2019年08月29日 Virtual Conference 腾讯会议网络会议室。<br/></p>
