--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -70,7 +70,7 @@
             <div class="introdution">
                 <div id="theme">
                 <p style="text-align: center;" >网络空间安全与应用密码学国际研讨会-2020<br/></p>
-		        <p style="text-align: center;text-indent:2em; " >CSAC-2020<br/></p>
+		        <p style="text-align: center;text-indent:2em; " >-CSAC-2020<br/></p>
                     <hr/>
                 <p style="text-indent:2em; font-family: 方正兰亭; " >国际网络安全受到的威胁越来越严重，网络空间安全的形势变得异常严峻。密码学作为实现网络空间安全保障的重要支柱，对网络空间安全基础保障的作用更加突出。<br/>
                     &nbsp; &nbsp;网络空间安全与应用密码学国际研讨会将就密码应用的相关问题，展开探讨和交流。本届会议将于2020年08月29日-2020年08月31日在中国举行，由DFSC信息研发中心和University of Surrey SSG承办， 金陵科技学院 网络空间安全学院协办。会议将邀请海内外在相关领域研究成果杰出的30位教授就相关问题给出30个特邀报告，每个特邀报告的时间为50分钟。热烈欢迎各位莅临研讨会指导和交流。
