--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -208,7 +208,7 @@
                                 <tr><td colspan="4">08月29日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
                                 <tr class="tableizer-firstrow"><th>时间</th><th>报告</th><th>报告人</th><th>主持人</th></tr>
                                 <tr><td>&nbsp;8:00 - 8:30</td><td colspan="3">会议主席致辞</td></tr>
-                                <tr><td>&nbsp;8:30 - 9:20</td><td>特邀报告1</td><td>来学嘉</td><td>密码学在网络空间安全中的应用</td></tr>
+                                <tr><td>&nbsp;8:30 - 9:20</td><td>密码学在网络空间安全中的应用</td><td>来学嘉</td>待定<td></td></tr>
                                 <tr><td>&nbsp;9:20 - 10:00</td><td></td><td></td><td rowspan="2"></td></tr>
                                 <tr><td>&nbsp;10:00- 10:40</td><td></td><td></td></tr>
                                 <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
@@ -222,7 +222,7 @@
                                 <tr><td>16:20 - 17:00</td><td></td><td></td></tr>
                                 <tr><td colspan="4">晚餐</td></tr>
                                 <tr><td colspan="4">08月30日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
-                                <tr><td>&nbsp;8:30 - 9:20</td><td>特邀报告1</td><td>来学嘉</td><td>密码学在网络空间安全中的应用</td></tr>
+                                <tr><td>&nbsp;8:30 - 9:20</td><td></td><td></td><td></td></tr>
                                 <tr><td>&nbsp;9:20 - 10:00</td><td></td><td></td><td rowspan="2"></td></tr>
                                 <tr><td>&nbsp;10:00- 10:40</td><td></td><td></td></tr>
                                 <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
@@ -236,7 +236,7 @@
                                 <tr><td>16:20 - 17:00</td><td></td><td></td></tr>
                                 <tr><td colspan="4">晚餐</td></tr>
                                 <tr><td colspan="4">08月30日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
-                                <tr><td>&nbsp;8:30 - 9:20</td><td>特邀报告1</td><td>来学嘉</td><td>密码学在网络空间安全中的应用</td></tr>
+                                <tr><td>&nbsp;8:30 - 9:20</td><td></td><td></td><td></td></tr>
                                 <tr><td>&nbsp;9:20 - 10:00</td><td></td><td></td><td rowspan="2"></td></tr>
                                 <tr><td>&nbsp;10:00- 10:40</td><td></td><td></td></tr>
                                 <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
