--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -212,42 +212,42 @@
                                 <tr><td>&nbsp;9:20 - 10:00</td><td>数学与音乐(人工智能)</td><td>王杰</td><td rowspan="2">待定</td></tr>
                                 <tr><td>&nbsp;10:00- 10:40</td><td>邀请报告1</td><td></td></tr>
                                 <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
-                                <tr><td>10:50 - 11:30</td><td></td><td></td><td rowspan="2"></td></tr>
-                                <tr><td>11:30 - 12:10</td><td></td><td></td></tr>
+                                <tr><td>10:50 - 11:30</td><td>邀请报告2</td><td>陆荣幸</td><td rowspan="2">待定</td></tr>
+                                <tr><td>11:30 - 12:10</td><td>邀请报告3</td><td>鲁力</td></tr>
                                 <tr><td colspan="4">午餐+休息</td></tr>
-                                <tr><td>14:00 - 14:40</td><td>H</td><td></td><td rowspan="2"></td></tr>
-                                <tr><td>14:40 - 15:20</td><td></td><td></td></tr>
+                                <tr><td>14:00 - 14:40</td><td>邀请报告4</td><td>胡磊</td><td rowspan="2">待定</td></tr>
+                                <tr><td>14:40 - 15:20</td><td>邀请报告5</td><td>陈恭亮</td></tr>
                                 <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
-                                <tr><td>15:40 - 16:20</td><td></td><td></td><td rowspan="2"></td></tr>
-                                <tr><td>16:20 - 17:00</td><td></td><td></td></tr>
+                                <tr><td>15:40 - 16:20</td><td>邀请报告6</td><td>荘恺莘</td><td rowspan="2">待定</td></tr>
+                                <tr><td>16:20 - 17:00</td><td>邀请报告7</td><td>史扬</td></tr>
                                 <tr><td colspan="4">晚餐</td></tr>
                                 <tr><td colspan="4">08月30日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
-                                <tr><td>&nbsp;8:30 - 9:20</td><td></td><td></td><td></td></tr>
-                                <tr><td>&nbsp;9:20 - 10:00</td><td></td><td></td><td rowspan="2"></td></tr>
-                                <tr><td>&nbsp;10:00- 10:40</td><td></td><td></td></tr>
+                                <tr><td>&nbsp;8:30 - 9:20</td><td>邀请报告8</td><td>蒋林智</td><td>待定</td></tr>
+                                <tr><td>&nbsp;9:20 - 10:00</td><td>邀请报告9</td><td>陈晓峰</td><td rowspan="2">待定</td></tr>
+                                <tr><td>&nbsp;10:00- 10:40</td><td>邀请报告10</td><td>许春根</td></tr>
                                 <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
-                                <tr><td>10:50 - 11:30</td><td></td><td></td><td rowspan="2"></td></tr>
-                                <tr><td>11:30 - 12:10</td><td></td><td></td></tr>
+                                <tr><td>10:50 - 11:30</td><td>邀请报告11</td><td>李允</td><td rowspan="2">待定</td></tr>
+                                <tr><td>11:30 - 12:10</td><td>邀请报告12</td>待定<td></td></tr>
                                 <tr><td colspan="4">午餐+休息</td></tr>
-                                <tr><td>14:00 - 14:40</td><td>H</td><td></td><td rowspan="2"></td></tr>
-                                <tr><td>14:40 - 15:20</td><td></td><td></td></tr>
+                                <tr><td>14:00 - 14:40</td><td>邀请报告13</td><td>金耀初</td><td rowspan="2">待定</td></tr>
+                                <tr><td>14:40 - 15:20</td><td>邀请报告14</td><td>纪守领</td></tr>
                                 <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
-                                <tr><td>15:40 - 16:20</td><td></td><td></td><td rowspan="2"></td></tr>
-                                <tr><td>16:20 - 17:00</td><td></td><td></td></tr>
+                                <tr><td>15:40 - 16:20</td><td>邀请报告15</td><td>张卫明</td><td rowspan="2">待定</td></tr>
+                                <tr><td>16:20 - 17:00</td><td>邀请报告16</td><td>余水</td></tr>
                                 <tr><td colspan="4">晚餐</td></tr>
-                                <tr><td colspan="4">08月30日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
-                                <tr><td>&nbsp;8:30 - 9:20</td><td></td><td></td><td></td></tr>
-                                <tr><td>&nbsp;9:20 - 10:00</td><td></td><td></td><td rowspan="2"></td></tr>
-                                <tr><td>&nbsp;10:00- 10:40</td><td></td><td></td></tr>
+                                <tr><td colspan="4">08月31日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
+                                <tr><td>&nbsp;8:30 - 9:20</td><td>邀请报告17</td><td>秦志光</td><td>待定</td></tr>
+                                <tr><td>&nbsp;9:20 - 10:00</td><td>邀请报告18</td><td>张锋巍</td><td rowspan="2">待定</td></tr>
+                                <tr><td>&nbsp;10:00- 10:40</td><td>邀请报告19</td><td>付玉龙</td></tr>
                                 <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
-                                <tr><td>10:50 - 11:30</td><td></td><td></td><td rowspan="2"></td></tr>
-                                <tr><td>11:30 - 12:10</td><td></td><td></td></tr>
+                                <tr><td>10:50 - 11:30</td><td>邀请报告20</td><td>李舟军</td><td rowspan="2">待定</td></tr>
+                                <tr><td>11:30 - 12:10</td><td>邀请报告21</td><td>沈超</td></tr>
                                 <tr><td colspan="4">午餐+休息</td></tr>
-                                <tr><td>14:00 - 14:40</td><td>H</td><td></td><td rowspan="2"></td></tr>
-                                <tr><td>14:40 - 15:20</td><td></td><td></td></tr>
+                                <tr><td>14:00 - 14:40</td><td>邀请报告22</td><td>郭雷</td><td rowspan="2">待定</td></tr>
+                                <tr><td>14:40 - 15:20</td><td>邀请报告23</td><td>孙智立</td></tr>
                                 <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
-                                <tr><td>15:40 - 16:20</td><td></td><td></td><td rowspan="2"></td></tr>
-                                <tr><td>16:20 - 17:00</td><td></td><td></td></tr>
+                                <tr><td>15:40 - 16:20</td><td>邀请报告24</td><td>待定</td><td rowspan="2">待定</td></tr>
+                                <tr><td>16:20 - 17:00</td><td>邀请报告25</td><td>待定</td></tr>
                                 <tr><td colspan="4">晚餐</td></tr>
                             </tbody>
                         </table>
