--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -282,6 +282,12 @@
                                         <tr>
                                             <td colspan="2">注：缴费时请您注明以下信息（会议CSAC+参会人姓名）</td>
                                         </tr>
+					    <tr>
+                                            <td colspan="2"><a href="TeamWeb/team files/盖章通知-网络空间安全与应用密码学国际研讨会.pdf " download="盖章通知-网络空间安全与应用密码学国际研讨会.pdf ">会议通知下载</a></td>
+                                        </tr>
+					     <tr>
+                                            <td colspan="2"><a href="TeamWeb/team files/姓名+单位名称+CSAC会议2020—会议注册表.xlsx  " download="姓名+单位名称+CSAC会议2020—会议注册表.xlsx ">会议注册表下载</a></td>
+                                        </tr>
                                     </tbody>
                                 </table>
                                 <table class="table" style="margin-top: -20px; ">
