--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -220,7 +220,7 @@
                                 <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
                                 <tr><td>15:40 - 16:20</td><td>邀请报告6</td><td>荘恺莘</td><td rowspan="3">待定</td></tr>
                                 <tr><td>16:20 - 17:00</td><td>邀请报告7</td><td>史扬</td></tr>
-				     <tr><td>17:00 - 17:50</td><td>邀请报告8</td><td>待定</td></tr>
+				     <tr><td>17:00 - 17:50</td><td>邀请报告8</td><td>杨博翰</td></tr>
                                 <tr><td colspan="4">晚餐</td></tr>
                                 <tr><td colspan="4">08月30日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
                                 <tr><td>&nbsp;8:30 - 9:20</td><td>邀请报告9</td><td>蒋林智</td><td>待定</td></tr>
