返回原来版本

--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -69,11 +69,11 @@
     <div id="introdution">
         <div class="introdution">
             <div id="theme">
-                <p style="text-align: center;">网络空间安全与应用密码学国际研讨会-2020</p>
-                <p style="text-align: center;" >CSAC-2020</p>
+                <p style="text-align: center;" >网络空间安全与应用密码学国际研讨会-2020<br/></p>
+                <p style="text-align: center;text-indent:2em; " >-CSAC-2020<br/></p>
                 <hr/>
                 <p style="text-indent:2em; font-family: 方正兰亭; " >国际网络安全受到的威胁越来越严重，网络空间安全的形势变得异常严峻。密码学作为实现网络空间安全保障的重要支柱，对网络空间安全基础保障的作用更加突出。<br/>
-                    &emsp;&emsp;网络空间安全与应用密码学国际研讨会将就密码应用的相关问题，展开探讨和交流。本届会议将于2020年08月29日-2020年08月31日在中国举行，由DFSC信息研发中心和University of Surrey SSG承办， 金陵科技学院 网络空间安全学院协办。会议将邀请海内外在相关领域研究成果杰出的30位教授就相关问题给出30个特邀报告，每个特邀报告的时间为50分钟。热烈欢迎各位莅临研讨会指导和交流。
+                    &nbsp; &nbsp;网络空间安全与应用密码学国际研讨会将就密码应用的相关问题，展开探讨和交流。本届会议将于2020年08月29日-2020年08月31日在中国举行，由DFSC信息研发中心和University of Surrey SSG承办， 金陵科技学院 网络空间安全学院协办。会议将邀请海内外在相关领域研究成果杰出的30位教授就相关问题给出30个特邀报告，每个特邀报告的时间为50分钟。热烈欢迎各位莅临研讨会指导和交流。
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                 </p>
             </div>
@@ -208,46 +208,49 @@
                         <tr><td colspan="4">08月29日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
                         <tr class="tableizer-firstrow"><th>时间</th><th>报告</th><th>报告人</th><th>主持人</th></tr>
                         <tr><td>&nbsp;8:00 - 8:30</td><td colspan="3">会议主席致辞</td></tr>
-                        <tr><td>&nbsp;8:30 - 9:20</td><td>特邀报告1</td><td>来学嘉</td><td>密码学在网络空间安全中的应用</td></tr>
-                        <tr><td>&nbsp;9:20 - 10:00</td><td></td><td></td><td rowspan="2"></td></tr>
-                        <tr><td>&nbsp;10:00- 10:40</td><td></td><td></td></tr>
+                        <tr><td>&nbsp;8:30 - 9:20</td><td>密码学在网络空间安全中的应用</td><td>来学嘉</td><td>待定</td></tr>
+                        <tr><td>&nbsp;9:20 - 10:00</td><td>密码&bull;音乐&bull;机器学习</td><td>王杰</td><td rowspan="2">待定</td></tr>
+                        <tr><td>&nbsp;10:00- 10:40</td><td>邀请报告1</td><td>待定</td></tr>
                         <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>10:50 - 11:30</td><td></td><td></td><td rowspan="2"></td></tr>
-                        <tr><td>11:30 - 12:10</td><td></td><td></td></tr>
+                        <tr><td>10:50 - 11:30</td><td>邀请报告2</td><td>陆荣幸</td><td rowspan="2">待定</td></tr>
+                        <tr><td>11:30 - 12:10</td><td>邀请报告3</td><td>鲁力</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
-                        <tr><td>14:00 - 14:40</td><td>H</td><td></td><td rowspan="2"></td></tr>
-                        <tr><td>14:40 - 15:20</td><td></td><td></td></tr>
+                        <tr><td>14:00 - 14:40</td><td>邀请报告4</td><td>胡磊</td><td rowspan="2">待定</td></tr>
+                        <tr><td>14:40 - 15:20</td><td>邀请报告5</td><td>陈恭亮</td></tr>
                         <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>15:40 - 16:20</td><td></td><td></td><td rowspan="2"></td></tr>
-                        <tr><td>16:20 - 17:00</td><td></td><td></td></tr>
+                        <tr><td>15:40 - 16:20</td><td>邀请报告6</td><td>荘恺莘</td><td rowspan="3">待定</td></tr>
+                        <tr><td>16:20 - 17:00</td><td>邀请报告7</td><td>史扬</td></tr>
+                        <tr><td>17:00 - 17:50</td><td>邀请报告8</td><td>杨博翰</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         <tr><td colspan="4">08月30日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
-                        <tr><td>&nbsp;8:30 - 9:20</td><td>特邀报告1</td><td>来学嘉</td><td>密码学在网络空间安全中的应用</td></tr>
-                        <tr><td>&nbsp;9:20 - 10:00</td><td></td><td></td><td rowspan="2"></td></tr>
-                        <tr><td>&nbsp;10:00- 10:40</td><td></td><td></td></tr>
+                        <tr><td>&nbsp;8:30 - 9:20</td><td>邀请报告9</td><td>蒋林智</td><td>待定</td></tr>
+                        <tr><td>&nbsp;9:20 - 10:00</td><td>邀请报告10</td><td>陈晓峰</td><td rowspan="2">待定</td></tr>
+                        <tr><td>&nbsp;10:00- 10:40</td><td>邀请报告11</td><td>许春根</td></tr>
                         <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>10:50 - 11:30</td><td></td><td></td><td rowspan="2"></td></tr>
-                        <tr><td>11:30 - 12:10</td><td></td><td></td></tr>
+                        <tr><td>10:50 - 11:30</td><td>邀请报告12</td><td>李允</td><td rowspan="2">待定</td></tr>
+                        <tr><td>11:30 - 12:10</td><td>邀请报告13</td>待定<td>待定</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
-                        <tr><td>14:00 - 14:40</td><td>H</td><td></td><td rowspan="2"></td></tr>
-                        <tr><td>14:40 - 15:20</td><td></td><td></td></tr>
+                        <tr><td>14:00 - 14:40</td><td>邀请报告14</td><td>金耀初</td><td rowspan="2">待定</td></tr>
+                        <tr><td>14:40 - 15:20</td><td>邀请报告15</td><td>纪守领</td></tr>
                         <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>15:40 - 16:20</td><td></td><td></td><td rowspan="2"></td></tr>
-                        <tr><td>16:20 - 17:00</td><td></td><td></td></tr>
+                        <tr><td>15:40 - 16:20</td><td>邀请报告16</td><td>张卫明</td><td rowspan="3">待定</td></tr>
+                        <tr><td>16:20 - 17:00</td><td>邀请报告17</td><td>余水</td></tr>
+                        <tr><td>17:00 - 17:50</td><td>邀请报告18</td><td>待定</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
-                        <tr><td colspan="4">08月30日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
-                        <tr><td>&nbsp;8:30 - 9:20</td><td>特邀报告1</td><td>来学嘉</td><td>密码学在网络空间安全中的应用</td></tr>
-                        <tr><td>&nbsp;9:20 - 10:00</td><td></td><td></td><td rowspan="2"></td></tr>
-                        <tr><td>&nbsp;10:00- 10:40</td><td></td><td></td></tr>
+                        <tr><td colspan="4">08月31日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
+                        <tr><td>&nbsp;8:30 - 9:20</td><td>邀请报告19</td><td>秦志光</td><td>待定</td></tr>
+                        <tr><td>&nbsp;9:20 - 10:00</td><td>邀请报告20</td><td>张锋巍</td><td rowspan="2">待定</td></tr>
+                        <tr><td>&nbsp;10:00- 10:40</td><td>邀请报告21</td><td>付玉龙</td></tr>
                         <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>10:50 - 11:30</td><td></td><td></td><td rowspan="2"></td></tr>
-                        <tr><td>11:30 - 12:10</td><td></td><td></td></tr>
+                        <tr><td>10:50 - 11:30</td><td>邀请报告22</td><td>李舟军</td><td rowspan="2">待定</td></tr>
+                        <tr><td>11:30 - 12:10</td><td>邀请报告23</td><td>沈超</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
-                        <tr><td>14:00 - 14:40</td><td>H</td><td></td><td rowspan="2"></td></tr>
-                        <tr><td>14:40 - 15:20</td><td></td><td></td></tr>
+                        <tr><td>14:00 - 14:40</td><td>邀请报告24</td><td>郭雷</td><td rowspan="2">待定</td></tr>
+                        <tr><td>14:40 - 15:20</td><td>邀请报告25</td><td>孙智立</td></tr>
                         <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>15:40 - 16:20</td><td></td><td></td><td rowspan="2"></td></tr>
-                        <tr><td>16:20 - 17:00</td><td></td><td></td></tr>
+                        <tr><td>15:40 - 16:20</td><td>邀请报告26</td><td>待定</td><td rowspan="3">待定</td></tr>
+                        <tr><td>16:20 - 17:00</td><td>邀请报告27</td><td>待定</td></tr>
+                        <tr><td>17:00 - 17:50</td><td>邀请报告28</td><td>待定</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         </tbody>
                     </table>
@@ -257,7 +260,7 @@
                         <div id="register">
                             <table class="table">
                                 <caption style="">注册信息</caption>
-                                <tbody style=" width: 85%">
+                                <tbody style="">
                                 <tr >
                                     <td >注册费用：</td><td>1500元/人</td>
                                 </tr>
@@ -279,11 +282,15 @@
                                 <tr>
                                     <td colspan="2">注：缴费时请您注明以下信息（会议CSAC+参会人姓名）</td>
                                 </tr>
+                                <tr>
+                                    <td colspan="2"><a href="team files/盖章通知-网络空间安全与应用密码学国际研讨会.pdf ">会议通知下载</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="team files/姓名+单位名称+CSAC会议2020—会议注册表.xlsx">会议注册表下载</a> </td>
+
+                                </tr>
                                 </tbody>
                             </table>
                             <table class="table" style="margin-top: -20px; ">
                                 <caption style="">住宿信息</caption>
-                                <tbody style="width: 85%">
+                                <tbody style="width: 73.5%;">
                                 <tr style="">
                                     <td style="width: 10%;">  </td>
                                     <td style="text-align: center; width: 30%">论坛住宿酒店：网络会议</td>
@@ -293,16 +300,14 @@
                             </table>
                             <table class="table" style="margin-top: -20px;">
                                 <caption style="">会议赞助与合作：</caption>
-                                <tbody style="width: 85%">
+                                <tbody style="width: 73.5%;">
                                 <tr>
-                                    <td style="width: 10%">  </td>
-                                    <td style="text-align: center; width: 40% ">蒋林智; linzjiang(@)hotmail(dot)com</td>
-                                    <td style="width: 10%">  </td>
+                                    <td style="width: 5%;">  </td>
+                                    <td style="text-align: center; width: 60%">蒋林智; linzjiang(@)hotmail(dot)com</td>
+                                    <td style="width: 5%;">  </td>
                                 </tr>
                                 </tbody>
                             </table>
-
-
                         </div>
                     </div>
                 </div>
