--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -229,10 +229,10 @@
                         <tr><td>&nbsp;9:20 - 10:00</td><td>邀请报告10</td><td>陈晓峰</td><td rowspan="2">待定</td></tr>
                         <tr><td>&nbsp;10:00- 10:40</td><td>邀请报告11</td><td>许春根</td></tr>
                         <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>10:50 - 11:30</td><td>邀请报告12</td><td>李允</td><td rowspan="2">待定</td></tr>
+                        <tr><td>10:50 - 11:30</td><td>智能汽车网络安全技术与实践</td><td>李允</td><td rowspan="2">待定</td></tr>
                         <tr><td>11:30 - 12:10</td><td>邀请报告13</td>待定<td>待定</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
-                        <tr><td>14:00 - 14:40</td><td>邀请报告14</td><td>金耀初</td><td rowspan="2">待定</td></tr>
+                        <tr><td>14:00 - 14:40</td><td>进化计算与人工智能</td><td>金耀初</td><td rowspan="2">待定</td></tr>
                         <tr><td>14:40 - 15:20</td><td>邀请报告15</td><td>纪守领</td></tr>
                         <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
                         <tr><td>15:40 - 16:20</td><td>邀请报告16</td><td>张卫明</td><td rowspan="3">待定</td></tr>
