--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -217,8 +217,8 @@
                         <tr><td>10:50 - 11:30</td><td>邀请报告2</td><td>陆荣幸</td><td rowspan="2">待定</td></tr>
                         <tr><td>11:30 - 12:10</td><td>邀请报告3</td><td>鲁力</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
-                        <tr><td>14:00 - 14:40</td><td>邀请报告4</td><td>胡磊</td><td rowspan="2">待定</td></tr>
-                        <tr><td>14:40 - 15:20</td><td>邀请报告5</td><td>陈恭亮</td></tr>
+                        <tr><td>14:00 - 14:40</td><td>卡片上的密码学：早期案例和几个实现要素</td><td>胡磊</td><td rowspan="2">待定</td></tr>
+                        <tr><td>14:40 - 15:20</td><td>物联网安全技术</td><td>秦志光</td></tr>
                         <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
                         <tr><td>15:40 - 16:20</td><td>邀请报告6</td><td>荘恺莘</td><td rowspan="3">待定</td></tr>
                         <tr><td>16:20 - 17:00</td><td>邀请报告7</td><td>史扬</td></tr>
@@ -240,7 +240,7 @@
                         <tr><td>17:00 - 17:50</td><td>邀请报告18</td><td>待定</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         <tr><td colspan="4">08月31日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
-                        <tr><td>&nbsp;8:30 - 9:20</td><td>邀请报告19</td><td>秦志光</td><td>待定</td></tr>
+                        <tr><td>&nbsp;8:30 - 9:20</td><td>邀请报告19</td><td>待定</td><td>待定</td></tr>
                         <tr><td>&nbsp;9:20 - 10:00</td><td>邀请报告20</td><td>张锋巍</td><td rowspan="2">待定</td></tr>
                         <tr><td>&nbsp;10:00- 10:40</td><td>邀请报告21</td><td>付玉龙</td></tr>
                         <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
