--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -235,14 +235,14 @@
                         <tr><td>14:00 - 14:40</td><td>进化计算与人工智能</td><td>金耀初</td><td rowspan="2">待定</td></tr>
                         <tr><td>14:40 - 15:20</td><td>邀请报告15</td><td>纪守领</td></tr>
                         <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>15:40 - 16:20</td><td>邀请报告16</td><td>张卫明</td><td rowspan="3">待定</td></tr>
-                        <tr><td>16:20 - 17:00</td><td>邀请报告17</td><td>余水</td></tr>
+                        <tr><td>15:40 - 16:20</td><td>信息隐藏与人工智能安全</td><td>张卫明</td><td rowspan="3">待定</td></tr>
+                        <tr><td>16:20 - 17:00</td><td>Big Data Privacy: from Networking and Artificial Intelligence Perspectives</td><td>余水</td></tr>
                         <tr><td>17:00 - 17:50</td><td>邀请报告18</td><td>待定</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         <tr><td colspan="4">08月31日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
                         <tr><td>&nbsp;8:30 - 9:20</td><td>邀请报告19</td><td>待定</td><td>待定</td></tr>
                         <tr><td>&nbsp;9:20 - 10:00</td><td>邀请报告20</td><td>张锋巍</td><td rowspan="2">待定</td></tr>
-                        <tr><td>&nbsp;10:00- 10:40</td><td>邀请报告21</td><td>付玉龙</td></tr>
+                        <tr><td>&nbsp;10:00- 10:40</td><td>邀请报告21</td><td>待定</td></tr>
                         <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
                         <tr><td>10:50 - 11:30</td><td>邀请报告22</td><td>李舟军</td><td rowspan="2">待定</td></tr>
                         <tr><td>11:30 - 12:10</td><td>邀请报告23</td><td>沈超</td></tr>
