--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -227,7 +227,7 @@
                         <tr><td colspan="4">08月30日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
                         <tr><td>&nbsp;8:30 - 9:20</td><td>邀请报告9</td><td>蒋林智</td><td>待定</td></tr>
                         <tr><td>&nbsp;9:20 - 10:00</td><td>邀请报告10</td><td>陈晓峰</td><td rowspan="2">待定</td></tr>
-                        <tr><td>&nbsp;10:00- 10:40</td><td>邀请报告11</td><td>许春根</td></tr>
+                        <tr><td>&nbsp;10:00- 10:40</td><td>Designs and Challenges of Searchable Encryption</td><td>许春根</td></tr>
                         <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
                         <tr><td>10:50 - 11:30</td><td>智能汽车网络安全技术与实践</td><td>李允</td><td rowspan="2">待定</td></tr>
                         <tr><td>11:30 - 12:10</td><td>邀请报告13</td>待定<td>待定</td></tr>
