--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -233,7 +233,7 @@
                         <tr><td>11:30 - 12:10</td><td>邀请报告13</td>待定<td>待定</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
                         <tr><td>14:00 - 14:40</td><td>进化计算与人工智能</td><td>金耀初</td><td rowspan="2">待定</td></tr>
-                        <tr><td>14:40 - 15:20</td><td>邀请报告15</td><td>纪守领</td></tr>
+                        <tr><td>14:40 - 15:20</td><td>Deep Learning Security: From the NLP Perspective</td><td>纪守领</td></tr>
                         <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
                         <tr><td>15:40 - 16:20</td><td>信息隐藏与人工智能安全</td><td>张卫明</td><td rowspan="3">待定</td></tr>
                         <tr><td>16:20 - 17:00</td><td>Big Data Privacy: from Networking and Artificial Intelligence Perspectives</td><td>余水</td></tr>
