--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -245,12 +245,12 @@
                         <tr><td>&nbsp;10:00- 10:40</td><td>邀请报告21</td><td>待定</td></tr>
                         <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
                         <tr><td>10:50 - 11:30</td><td>安全协议形式化分析方法与自动验证工具</td><td>李舟军</td><td rowspan="2">待定</td></tr>
-                        <tr><td>11:30 - 12:10</td><td>可信计算与人工智能</td><td>沈超</td></tr>
+                        <tr><td>11:30 - 12:10</td><td>可信计算及其发展</td><td>待定</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
-                        <tr><td>14:00 - 14:40</td><td>无人机与安全</td><td>郭雷</td><td rowspan="2">待定</td></tr>
-                        <tr><td>14:40 - 15:20</td><td>卫星通信与安全</td><td>孙智立</td></tr>
+                        <tr><td>14:00 - 14:40</td><td>可信计算与人工智能</td><td>沈超</td><td rowspan="2">待定</td></tr>
+                        <tr><td>14:40 - 15:20</td><td>无人机与安全</td><td>郭雷</td></tr>
                         <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>15:40 - 16:20</td><td>邀请报告26</td><td>待定</td><td rowspan="3">待定</td></tr>
+                        <tr><td>15:40 - 16:20</td><td>卫星通信与安全</td><td>孙智立</td><td rowspan="3">待定</td></tr>
                         <tr><td>16:20 - 17:00</td><td>邀请报告27</td><td>待定</td></tr>
                         <tr><td>17:00 - 17:50</td><td>邀请报告28</td><td>待定</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
