--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -212,13 +212,13 @@
                         <tr><td>&nbsp;8:00 - 8:30</td><td colspan="3">会议主席致辞</td></tr>
                         <tr><td>&nbsp;8:30 - 9:20</td><td>密码学在网络空间安全中的应用</td><td>来学嘉</td><td>待定</td></tr>
                         <tr><td>&nbsp;9:20 - 10:00</td><td>密码&bull;音乐&bull;机器学习</td><td>王杰</td><td rowspan="2">待定</td></tr>
-                        <tr><td>&nbsp;10:00- 10:40</td><td>邀请报告1</td><td>待定</td></tr>
+                        <tr><td>&nbsp;10:00- 10:40</td><td>物联网安全技术</td><td>秦志光</td></tr>
                         <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
                         <tr><td>10:50 - 11:30</td><td>邀请报告2</td><td>陆荣幸</td><td rowspan="2">待定</td></tr>
                         <tr><td>11:30 - 12:10</td><td>邀请报告3</td><td>鲁力</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
                         <tr><td>14:00 - 14:40</td><td>卡片上的密码学：早期案例和几个实现要素</td><td>胡磊</td><td rowspan="2">待定</td></tr>
-                        <tr><td>14:40 - 15:20</td><td>物联网安全技术</td><td>秦志光</td></tr>
+                        <tr><td>14:40 - 15:20</td><td>邀请报告4</td><td>待定</td></tr>
                         <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
                         <tr><td>15:40 - 16:20</td><td>邀请报告6</td><td>荘恺莘</td><td rowspan="3">待定</td></tr>
                         <tr><td>16:20 - 17:00</td><td>邀请报告7</td><td>史扬</td></tr>
