--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -251,8 +251,8 @@
                         <tr><td>14:40 - 15:20</td><td>无人机与安全</td><td>郭雷</td></tr>
                         <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
                         <tr><td>15:40 - 16:20</td><td>卫星通信与安全</td><td>孙智立</td><td rowspan="3">待定</td></tr>
-                        <tr><td>16:20 - 17:00</td><td>邀请报告27</td><td>待定</td></tr>
-                        <tr><td>17:00 - 17:50</td><td>邀请报告28</td><td>待定</td></tr>
+                        <tr><td>16:20 - 17:00</td><td>5G通信及其应用</td><td>待定</td></tr>
+                        <tr><td>17:00 - 17:50</td><td>5G通信安全</td><td>待定</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         </tbody>
                     </table>
