--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -211,17 +211,17 @@
                         <tr class="tableizer-firstrow"><th>时间</th><th>报告</th><th>报告人</th><th>主持人</th></tr>
                         <tr><td>&nbsp;8:00 - 8:30</td><td colspan="3">会议主席致辞</td></tr>
                         <tr><td>&nbsp;8:30 - 9:20</td><td>密码学在网络空间安全中的应用</td><td>来学嘉</td><td>待定</td></tr>
-                        <tr><td>&nbsp;9:20 - 10:00</td><td>密码&bull;音乐&bull;机器学习</td><td>王杰</td><td rowspan="2">待定</td></tr>
+                        <tr><td>&nbsp;9:20 - 10:00</td><td>密码&bull;音乐&bull;机器学习</td><td>王&emsp;杰</td><td rowspan="2">待定</td></tr>
                         <tr><td>&nbsp;10:00- 10:40</td><td>物联网安全技术</td><td>秦志光</td></tr>
                         <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
                         <tr><td>10:50 - 11:30</td><td>邀请报告2</td><td>陆荣幸</td><td rowspan="2">待定</td></tr>
-                        <tr><td>11:30 - 12:10</td><td>邀请报告3</td><td>鲁力</td></tr>
+                        <tr><td>11:30 - 12:10</td><td>邀请报告3</td><td>鲁&emsp;力</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
-                        <tr><td>14:00 - 14:40</td><td>卡片上的密码学：早期案例和几个实现要素</td><td>胡磊</td><td rowspan="2">待定</td></tr>
+                        <tr><td>14:00 - 14:40</td><td>卡片上的密码学：早期案例和几个实现要素</td><td>胡&emsp;磊</td><td rowspan="2">待定</td></tr>
                         <tr><td>14:40 - 15:20</td><td>Post-quantum Crypto Implementation in NIST</td><td>蒋林智</td></tr>
                         <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
                         <tr><td>15:40 - 16:20</td><td>邀请报告6</td><td>荘恺莘</td><td rowspan="3">待定</td></tr>
-                        <tr><td>16:20 - 17:00</td><td>邀请报告7</td><td>史扬</td></tr>
+                        <tr><td>16:20 - 17:00</td><td>邀请报告7</td><td>史&emsp;扬</td></tr>
                         <tr><td>17:00 - 17:50</td><td>邀请报告8</td><td>杨博翰</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         <tr><td colspan="4">08月30日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
@@ -229,14 +229,14 @@
                         <tr><td>&nbsp;9:20 - 10:00</td><td>邀请报告10</td><td>陈晓峰</td><td rowspan="2">待定</td></tr>
                         <tr><td>&nbsp;10:00- 10:40</td><td>Designs and Challenges of Searchable Encryption</td><td>许春根</td></tr>
                         <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>10:50 - 11:30</td><td>智能汽车网络安全技术与实践</td><td>李允</td><td rowspan="2">待定</td></tr>
+                        <tr><td>10:50 - 11:30</td><td>智能汽车网络安全技术与实践</td><td>李&emsp;允</td><td rowspan="2">待定</td></tr>
                         <tr><td>11:30 - 12:10</td><td>自动驾驶与安全</td>待定<td>待定</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
                         <tr><td>14:00 - 14:40</td><td>进化计算与人工智能</td><td>金耀初</td><td rowspan="2">待定</td></tr>
                         <tr><td>14:40 - 15:20</td><td>Deep Learning Security: From the NLP Perspective</td><td>纪守领</td></tr>
                         <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
                         <tr><td>15:40 - 16:20</td><td>信息隐藏与人工智能安全</td><td>张卫明</td><td rowspan="3">待定</td></tr>
-                        <tr><td>16:20 - 17:00</td><td>Big Data Privacy: from Networking and Artificial Intelligence Perspectives</td><td>余水</td></tr>
+                        <tr><td>16:20 - 17:00</td><td>Big Data Privacy: from Networking and Artificial Intelligence Perspectives</td><td>余&emsp;水</td></tr>
                         <tr><td>17:00 - 17:50</td><td>邀请报告18</td><td>待定</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         <tr><td colspan="4">08月31日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
@@ -247,8 +247,8 @@
                         <tr><td>10:50 - 11:30</td><td>安全协议形式化分析方法与自动验证工具</td><td>李舟军</td><td rowspan="2">待定</td></tr>
                         <tr><td>11:30 - 12:10</td><td>可信计算及其发展</td><td>待定</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
-                        <tr><td>14:00 - 14:40</td><td>可信计算与人工智能</td><td>沈超</td><td rowspan="2">待定</td></tr>
-                        <tr><td>14:40 - 15:20</td><td>无人机与安全</td><td>郭雷</td></tr>
+                        <tr><td>14:00 - 14:40</td><td>可信计算与人工智能</td><td>沈&emsp;超</td><td rowspan="2">待定</td></tr>
+                        <tr><td>14:40 - 15:20</td><td>无人机与安全</td><td>郭&emsp;雷</td></tr>
                         <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
                         <tr><td>15:40 - 16:20</td><td>卫星通信与安全</td><td>孙智立</td><td rowspan="3">待定</td></tr>
                         <tr><td>16:20 - 17:00</td><td>5G通信及其应用</td><td>待定</td></tr>
