--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -222,15 +222,15 @@
                         <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
                         <tr><td>15:40 - 16:20</td><td>邀请报告6</td><td>荘恺莘</td><td rowspan="3">待定</td></tr>
                         <tr><td>16:20 - 17:00</td><td>邀请报告7</td><td>史&emsp;扬</td></tr>
-                        <tr><td>17:00 - 17:50</td><td>邀请报告8</td><td>杨博翰</td></tr>
+                        <tr><td>17:00 - 17:50</td><td>算法硬件实现及其应用</td><td>李鹤</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         <tr><td colspan="4">08月30日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
-                        <tr><td>&nbsp;8:30 - 9:20</td><td>邀请报告9</td><td>谷翀燕</td><td>待定</td></tr>
-                        <tr><td>&nbsp;9:20 - 10:00</td><td>邀请报告10</td><td>陈晓峰</td><td rowspan="2">待定</td></tr>
-                        <tr><td>&nbsp;10:00- 10:40</td><td>Designs and Challenges of Searchable Encryption</td><td>许春根</td></tr>
+                        <tr><td>&nbsp;8:30 - 9:20</td><td>邀请报告9</td><td>杨博翰</td><td>待定</td></tr>
+                        <tr><td>&nbsp;9:20 - 10:00</td><td>邀请报告10</td><td>谷翀燕</td><td rowspan="2">待定</td></tr>
+                        <tr><td>&nbsp;10:00- 10:40</td><td></td><td>陈晓峰</td></tr>
                         <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>10:50 - 11:30</td><td>智能汽车网络安全技术与实践</td><td>李&emsp;允</td><td rowspan="2">待定</td></tr>
-                        <tr><td>11:30 - 12:10</td><td>自动驾驶与安全</td>待定<td>待定</td></tr>
+                        <tr><td>10:50 - 11:30</td><td>Designs and Challenges of Searchable Encryption</td><td>许春根</td><td rowspan="2">待定</td></tr>
+                        <tr><td>11:30 - 12:10</td><td>智能汽车网络安全技术与实践</td>李&emsp;允<td>待定</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
                         <tr><td>14:00 - 14:40</td><td>进化计算与人工智能</td><td>金耀初</td><td rowspan="2">待定</td></tr>
                         <tr><td>14:40 - 15:20</td><td>Deep Learning Security: From the NLP Perspective</td><td>纪守领</td></tr>
