--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -230,7 +230,7 @@
                         <tr><td>&nbsp;10:00- 10:40</td><td></td><td>陈晓峰</td></tr>
                         <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
                         <tr><td>10:50 - 11:30</td><td>Designs and Challenges of Searchable Encryption</td><td>许春根</td><td rowspan="2">待定</td></tr>
-                        <tr><td>11:30 - 12:10</td><td>智能汽车网络安全技术与实践</td>李&emsp;允<td>待定</td></tr>
+                        <tr><td>11:30 - 12:10</td><td>智能汽车网络安全技术与实践</td><td>李&emsp;允</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
                         <tr><td>14:00 - 14:40</td><td>进化计算与人工智能</td><td>金耀初</td><td rowspan="2">待定</td></tr>
                         <tr><td>14:40 - 15:20</td><td>Deep Learning Security: From the NLP Perspective</td><td>纪守领</td></tr>
@@ -252,7 +252,7 @@
                         <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
                         <tr><td>15:40 - 16:20</td><td>卫星通信与安全</td><td>孙智立</td><td rowspan="3">待定</td></tr>
                         <tr><td>16:20 - 17:00</td><td>5G通信及其应用</td><td>待定</td></tr>
-                        <tr><td>17:00 - 17:50</td><td>5G通信中的安全</td><td>待定</td></tr>
+                        <tr><td>17:00 - 17:50</td><td>5G通信中的安全</td><td>吴泳澎</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         </tbody>
                     </table>
