--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -240,7 +240,7 @@
                         <tr><td>17:00 - 17:50</td><td>邀请报告18</td><td>待定</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         <tr><td colspan="4">08月31日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
-                        <tr><td>&nbsp;8:30 - 9:20</td><td>邀请报告19</td><td>待定</td><td>待定</td></tr>
+                        <tr><td>&nbsp;8:30 - 9:20</td><td>芯片和EDA</td><td>陈晓明</td><td>待定</td></tr>
                         <tr><td>&nbsp;9:20 - 10:00</td><td>KShot: Live Kernel Patching with SMM and SGX</td><td>张锋巍</td><td rowspan="2">待定</td></tr>
                         <tr><td>&nbsp;10:00- 10:40</td><td>邀请报告21</td><td>待定</td></tr>
                         <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
