--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -221,7 +221,7 @@
                         <tr><td>14:40 - 15:20</td><td>Post-quantum Crypto Implementation in NIST</td><td>蒋林智</td></tr>
                         <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
                         <tr><td>15:40 - 16:20</td><td>邀请报告6</td><td>荘恺莘</td><td rowspan="3">待定</td></tr>
-                        <tr><td>16:20 - 17:00</td><td>邀请报告7</td><td>史&emsp;扬</td></tr>
+                        <tr><td>16:20 - 17:00</td><td>抗白盒攻击密码算法及其在嵌入式系统中的实现</td><td>史&emsp;扬</td></tr>
                         <tr><td>17:00 - 17:50</td><td>算法硬件实现及其应用</td><td>李&emsp;鹤</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         <tr><td colspan="4">08月30日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
