--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -214,8 +214,8 @@
                         <tr><td>&nbsp;9:20 - 10:00</td><td>密码&bull;音乐&bull;机器学习</td><td>王&emsp;杰</td><td rowspan="2">待定</td></tr>
                         <tr><td>&nbsp;10:00- 10:40</td><td>物联网安全技术</td><td>秦志光</td></tr>
                         <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>10:50 - 11:30</td><td>邀请报告2</td><td>陆荣幸</td><td rowspan="2">待定</td></tr>
-                        <tr><td>11:30 - 12:10</td><td>邀请报告3</td><td>鲁&emsp;力</td></tr>
+                        <tr><td>10:50 - 11:30</td><td>智能电网与安全</td><td>陆荣幸</td><td rowspan="2">待定</td></tr>
+                        <tr><td>11:30 - 12:10</td><td>RFID相关的底层架构</td><td>鲁&emsp;力</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
                         <tr><td>14:00 - 14:40</td><td>卡片上的密码学：早期案例和几个实现要素</td><td>胡&emsp;磊</td><td rowspan="2">待定</td></tr>
                         <tr><td>14:40 - 15:20</td><td>Post-quantum Crypto Implementation in NIST</td><td>蒋林智</td></tr>
