--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -214,7 +214,7 @@
                         <tr><td>&nbsp;9:20 - 10:00</td><td>密码&bull;音乐&bull;机器学习</td><td>王&emsp;杰</td><td rowspan="2">待定</td></tr>
                         <tr><td>&nbsp;10:00- 10:40</td><td>物联网安全技术</td><td>秦志光</td></tr>
                         <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>10:50 - 11:30</td><td>智能电网与安全</td><td>陆荣幸</td><td rowspan="2">待定</td></tr>
+                        <tr><td>10:50 - 11:30</td><td>On Feasibility and Limitations of Detecting False Data Injection Attacks on Smart Grids Using D-FACTS Devices</td><td>陆荣幸</td><td rowspan="2">待定</td></tr>
                         <tr><td>11:30 - 12:10</td><td>RFID相关的底层架构</td><td>鲁&emsp;力</td></tr>
                         <tr><td colspan="4">午餐+休息</td></tr>
                         <tr><td>14:00 - 14:40</td><td>卡片上的密码学：早期案例和几个实现要素</td><td>胡&emsp;磊</td><td rowspan="2">待定</td></tr>
@@ -250,7 +250,7 @@
                         <tr><td>14:00 - 14:40</td><td>可信计算与人工智能</td><td>沈&emsp;超</td><td rowspan="2">待定</td></tr>
                         <tr><td>14:40 - 15:20</td><td>无人机与安全</td><td>郭&emsp;雷</td></tr>
                         <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>15:40 - 16:20</td><td>卫星通信与安全</td><td>孙智立</td><td rowspan="3">待定</td></tr>
+                        <tr><td>15:40 - 16:20</td><td>Future Satellite Communication Network and Security Challenges</td><td>孙智立</td><td rowspan="3">待定</td></tr>
                         <tr><td>16:20 - 17:00</td><td>5G通信及其应用</td><td>待定</td></tr>
                         <tr><td>17:00 - 17:50</td><td>A Survey of Physical Layer Security Techniques for 5G Wireless Networks and Challenges Ahead</td><td>吴泳澎</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
