--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -236,7 +236,7 @@
                         <tr><td>14:40 - 15:20</td><td>Deep Learning Security: From the NLP Perspective</td><td>纪守领</td></tr>
                         <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
                         <tr><td>15:40 - 16:20</td><td>信息隐藏与人工智能安全</td><td>张卫明</td><td rowspan="3">待定</td></tr>
-                        <tr><td>16:20 - 17:00</td><td>智能驾驶技术与应用</td><td>杨明</td></tr>
+                        <tr><td>16:20 - 17:00</td><td>智能驾驶技术与应用</td><td>杨&emsp;明</td></tr>
                         <tr><td>17:00 - 17:50</td><td>Big Data Privacy: from Networking and Artificial Intelligence Perspectives</td><td>余&emsp;水</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         <tr><td colspan="4">08月31日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
