--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -220,13 +220,13 @@
                         <tr><td>14:00 - 14:40</td><td>卡片上的密码学：早期案例和几个实现要素</td><td>胡&emsp;磊</td><td rowspan="2">待定</td></tr>
                         <tr><td>14:40 - 15:20</td><td>Post-quantum Crypto Implementation in NIST</td><td>蒋林智</td></tr>
                         <tr><td>15:20 - 15:40</td><td colspan="3">茶歇</td></tr>
-                        <tr><td>15:40 - 16:20</td><td>邀请报告6</td><td>荘恺莘</td><td rowspan="3">待定</td></tr>
+                        <tr><td>15:40 - 16:20</td><td>硬件实现与安全</td><td>荘恺莘</td><td rowspan="3">待定</td></tr>
                         <tr><td>16:20 - 17:00</td><td>抗白盒攻击密码算法及其在嵌入式系统中的实现</td><td>史&emsp;扬</td></tr>
                         <tr><td>17:00 - 17:50</td><td>算法硬件实现及其应用</td><td>李&emsp;鹤</td></tr>
                         <tr><td colspan="4">晚餐</td></tr>
                         <tr><td colspan="4">08月30日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
-                        <tr><td>&nbsp;8:30 - 9:20</td><td>邀请报告9</td><td>杨博翰</td><td>待定</td></tr>
-                        <tr><td>&nbsp;9:20 - 10:00</td><td>邀请报告10</td><td>谷翀燕</td><td rowspan="2">待定</td></tr>
+                        <tr><td>&nbsp;8:30 - 9:20</td><td>硬件安全</td><td>杨博翰</td><td>待定</td></tr>
+                        <tr><td>&nbsp;9:20 - 10:00</td><td>硬件安全</td><td>谷翀燕</td><td rowspan="2">待定</td></tr>
                         <tr><td>&nbsp;10:00- 10:40</td><td>可搜索加密与可验证性</td><td>陈晓峰</td></tr>
                         <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
                         <tr><td>10:50 - 11:30</td><td>Designs and Challenges of Searchable Encryption</td><td>许春根</td><td rowspan="2">待定</td></tr>
@@ -242,7 +242,7 @@
                         <tr><td colspan="4">08月31日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
                         <tr><td>&nbsp;8:30 - 9:20</td><td>芯片和EDA</td><td>陈晓明</td><td>待定</td></tr>
                         <tr><td>&nbsp;9:20 - 10:00</td><td>KShot: Live Kernel Patching with SMM and SGX</td><td>张锋巍</td><td rowspan="2">待定</td></tr>
-                        <tr><td>&nbsp;10:00- 10:40</td><td>邀请报告21</td><td>待定</td></tr>
+                        <tr><td>&nbsp;10:00- 10:40</td><td>机器人触觉感知</td><td>李强</td></tr>
                         <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
                         <tr><td>10:50 - 11:30</td><td>安全协议形式化分析方法与自动验证工具</td><td>李舟军</td><td rowspan="2">待定</td></tr>
                         <tr><td>11:30 - 12:10</td><td>可信计算及其发展</td><td>待定</td></tr>
