--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -242,7 +242,7 @@
                         <tr><td colspan="4">08月31日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
                         <tr><td>&nbsp;8:30 - 9:20</td><td>芯片和EDA</td><td>陈晓明</td><td>待定</td></tr>
                         <tr><td>&nbsp;9:20 - 10:00</td><td>KShot: Live Kernel Patching with SMM and SGX</td><td>张锋巍</td><td rowspan="2">待定</td></tr>
-                        <tr><td>&nbsp;10:00- 10:40</td><td>机器人触觉感知</td><td>李强</td></tr>
+                        <tr><td>&nbsp;10:00- 10:40</td><td>机器人触觉感知</td><td>李&emsp;强</td></tr>
                         <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
                         <tr><td>10:50 - 11:30</td><td>安全协议形式化分析方法与自动验证工具</td><td>李舟军</td><td rowspan="2">待定</td></tr>
                         <tr><td>11:30 - 12:10</td><td>可信计算及其发展</td><td>待定</td></tr>
