--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -226,7 +226,7 @@
                         <tr><td colspan="4">晚餐</td></tr>
                         <tr><td colspan="4">08月30日&nbsp;(会议地点：腾讯网络会议室)</td></tr>
                         <tr><td>&nbsp;8:30 - 9:20</td><td>硬件安全</td><td>杨博翰</td><td>待定</td></tr>
-                        <tr><td>&nbsp;9:20 - 10:00</td><td>硬件安全</td><td>谷翀燕</td><td rowspan="2">待定</td></tr>
+                        <tr><td>&nbsp;9:20 - 10:00</td><td>硬件安全</td><td>待定</td><td rowspan="2">待定</td></tr>
                         <tr><td>&nbsp;10:00- 10:40</td><td>可搜索加密与可验证性</td><td>陈晓峰</td></tr>
                         <tr><td>10:40 - 10:50</td><td colspan="3">茶歇</td></tr>
                         <tr><td>10:50 - 11:30</td><td>Designs and Challenges of Searchable Encryption</td><td>许春根</td><td rowspan="2">待定</td></tr>
